[build-system]
requires = ["hatchling", "hatch-vcs", "nipreps-versions"]
build-backend = "hatchling.build"

[project]
name = "nibabies"
description = "Processing workflows for magnetic resonance images of the brain in infants"
readme = "long_description.md"
authors = [{name = "The NiPreps Developers", email = "nipreps@gmail.com"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
license = {file = "LICENSE"}
requires-python = ">=3.9"
dependencies = [
    'importlib_resources; python_version < "3.9"',
    "nibabel >= 5.0.0",
    "nipype >= 1.8.5",
    "nitime",
    "nitransforms >= 23.0.1",
    "niworkflows >= 1.9.0",
#    "niworkflows @ git+https://github.com/nipreps/niworkflows.git@master",
    "numpy >= 1.21.0",
    "packaging",
    "pandas",
    "psutil >= 5.4",
    "pybids >= 0.15.0",
    "requests",
    "sdcflows >= 2.6.0",
#    "sdcflows @ git+https://github.com/nipreps/sdcflows.git@master",
    "smriprep ~= 0.12.1",
#    "smriprep @ git+https://github.com/nipreps/smriprep.git@master",
    "tedana >= 0.0.12",
    "templateflow >= 0.6",
    "toml",
]
dynamic = ["version"]

[project.urls]
Documentation = "https://nibabies.readthedocs.io/en/latest/"
"Source Code" = "https://github.com/nipreps/nibabies"
"Bug Tracker" = "https://github.com/nipreps/nibabies/issues"
"Docker Images" = "https://hub.docker.com/r/nipreps/nibabies"

[project.optional-dependencies]
dev = [
    "black ~= 22.3.0",
    "isort ~= 5.10.1",
    "pre-commit",
]
doc = [
    "pydot >= 1.2.3",
    "sphinx >= 1.8",
    "sphinx-argparse",
    "sphinx_rtd_theme",
    "myst_nb",
]
duecredit = ["duecredit"]
maint = [
    "fuzzywuzzy",
    "python-Levenshtein",
]
test = [
    "coverage",
    "pytest",
    "pytest-cov",
    "pytest-env",
]
telemetry = ["migas"]
# Aliases
docs = ["nibabies[doc]"]
tests = ["nibabies[test]"]
all = ["nibabies[dev,doc,maint,telemetry,test]"]

[project.scripts]
nibabies = "nibabies.cli.run:main"
nibabies-mcribs = "nibabies.cli.mcribs:main"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.sdist]
exclude = [".git_archival.txt"]  # No longer needed in sdist

[tool.hatch.build.targets.wheel]
packages = ["nibabies"]

[tool.hatch.version]
source = "vcs"
raw-options = { version_scheme = "nipreps-calver" }

[tool.hatch.build.hooks.vcs]
version-file = "nibabies/_version.py"

[tool.black]
line-length = 99
skip-string-normalization = true

[tool.isort]
profile = 'black'

[tool.flake8]
max-line-length = "99"
doctests = "False"
exclude = "*build/"
ignore = ["W503", "E203"]
per-file-ignores = [
    "**/__init__.py : F401",
    "docs/conf.py : E265",
]

[tool.pytest.ini_options]
norecursedirs = [".git"]
addopts = "-svx --doctest-modules"
doctest_optionflags = "ALLOW_UNICODE NORMALIZE_WHITESPACE ELLIPSIS"
env = "PYTHONHASHSEED=0"
filterwarnings = ["ignore::DeprecationWarning"]
junit_family = "xunit2"
