[build-system]
requires = ["hatchling>=1.27", "hatch-vcs", "nipreps-versions", "setuptools_scm < 8"]
build-backend = "hatchling.build"

[project]
name = "nibabies"
description = "Processing workflows for magnetic resonance images of the brain in infants"
readme = "long_description.md"
authors = [{name = "The NiPreps Developers", email = "nipreps@gmail.com"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.12"
dependencies = [
    "acres",
    "nibabel >= 5.1.0",
    "nipype >= 1.9.0",
    "nireports >= 25.3.0",
    "nitime",
    "nitransforms >= 25.0.1",
    #"niworkflows >= 1.14.1",
    "niworkflows @ git+https://github.com/nipreps/niworkflows.git@master",
    "numpy >= 2.0",
    "packaging",
    "pandas < 3",
    "psutil >= 5.4",
    "pybids >= 0.15.0",
    "requests",
    "sdcflows @ git+https://github.com/nipreps/sdcflows.git@enh/topup-estmov",
    "smriprep @ git+https://github.com/nipreps/smriprep.git@master",
    "tedana >= 23.0.2",
    "templateflow >= 25.0.3",
    "toml",
    "typing_extensions; python_version<'3.11'",
]
dynamic = ["version"]

[project.urls]
Documentation = "https://nibabies.readthedocs.io/en/latest/"
"Source Code" = "https://github.com/nipreps/nibabies"
"Bug Tracker" = "https://github.com/nipreps/nibabies/issues"
"Docker Images" = "https://hub.docker.com/r/nipreps/nibabies"

[project.optional-dependencies]
container = [
    "nibabies[telemetry]",
    "datalad",
    "datalad-osf",
]
dev = [
    "ruff",
    "pre-commit",
]
doc = [
    "pydot >= 1.2.3",
    "sphinx >= 1.8",
    "sphinx-argparse",
    "shibuya",
    "myst_parser",
    "sphinx-togglebutton",
    "sphinxcontrib.bibtex",
]
duecredit = ["duecredit"]
maint = [
    "fuzzywuzzy",
    "python-Levenshtein",
]
test = [
    "coverage[toml]",
    "pytest",
    "pytest-cov",
    "pytest-env",
    "pytest-xdist",
]
telemetry = ["migas >= 0.4.0"]
# Aliases
docs = ["nibabies[doc]"]
tests = ["nibabies[test]"]
all = ["nibabies[dev,doc,maint,telemetry,test]"]

[project.scripts]
nibabies = "nibabies.cli.run:main"
nibabies-mcribs = "nibabies.cli.mcribs:main"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.sdist]
exclude = [".git_archival.txt"]  # No longer needed in sdist

[tool.hatch.build.targets.wheel]
packages = ["nibabies"]

[tool.hatch.version]
source = "vcs"
raw-options = { version_scheme = "nipreps-calver" }

[tool.hatch.build.hooks.vcs]
version-file = "nibabies/_version.py"

#
# Pixi configuration
#

[tool.pixi.workspace]
channels = ["https://fsl.fmrib.ox.ac.uk/fsldownloads/fslconda/public", "conda-forge"]
platforms = ["linux-64"]

[tool.pixi.activation.env]
FSLDIR = "$CONDA_PREFIX"

[tool.pixi.environments]
# Local installs will use editable
default = { features = ["editable"], solve-group = "default" }
test = { features = ["editable", "test"], solve-group = "default" }
# Use "nibabies" feature for production environment, so it is identifiable.
# Includes "test" because the shipped image runs pytest in-container (CircleCI uses
# `docker run --entrypoint=pytest nibabies:dev`); fMRIPrep instead ships a separate
# test image. Revisit if/when nibabies splits a dedicated test image.
nibabies = { features = ["production", "container", "telemetry", "test"], solve-group = "production" }

[tool.pixi.feature.editable.pypi-dependencies]
nibabies = { path = ".", editable = true }
[tool.pixi.feature.production.pypi-dependencies]
nibabies = { path = ".", editable = false }

[tool.pixi.tasks]

[tool.pixi.pypi-options.dependency-overrides]
numpy = ">=2.3"

[tool.pixi.dependencies]
python = "3.12.*"
nodejs = "20.*"
mkl = "2024.2.2.*"
mkl-service = "2.4.2.*"
numpy = "2.3.*"
scipy = "1.15.*"
matplotlib = "3.10.*"
pandas = "2.3.*"
h5py = "3.14.*"
nitime = "0.11.*"
scikit-image = "0.25.*"
scikit-learn = "1.7.*"
ants = "2.6.*"
connectome-workbench-cli = { version = "2.0.*", build = "*qt6*" }
fsl-bet2 = "2111.8.*"
fsl-flirt = "2111.4.*"
fsl-fast4 = "2111.3.*"
fsl-fugue = "2201.5.*"
fsl-mcflirt = "2111.0.*"
fsl-miscmaths = "2412.4.*"
fsl-topup = "2203.5.*"
graphviz = "12.2.*"
pandoc = "3.7.*"

[tool.pixi.feature.container.dependencies]
git = "*"

[tool.pixi.feature.container.pypi-dependencies]
git-annex = ">=10.20250721"

#
# Developer tool configurations
#

[tool.black]
exclude = ".*"

[tool.pytest.ini_options]
minversion = "6"
testpaths = ["nibabies"]
log_level = "INFO"
xfail_strict = true
norecursedirs = [".git"]
addopts = [
  "-svx",
  "-ra",
  "--strict-config",
  "--strict-markers",
  "--doctest-modules",
  # Config pytest-cov
  "--cov=nibabies",
  "--cov-report=xml",
  "--cov-config=pyproject.toml",
]
doctest_optionflags = "ALLOW_UNICODE NORMALIZE_WHITESPACE ELLIPSIS"
env = "PYTHONHASHSEED=0"
filterwarnings = ["ignore::DeprecationWarning"]
junit_family = "xunit2"

[tool.ruff]
line-length = 99
extend-exclude = [
  "wrapper/**",
  ".maint/**",
  "scripts/**",
  "docs/**",
]

[tool.ruff.lint]
extend-select = [
  "W",
  "I",
  "UP",
  "YTT",
  "S",
  "BLE",
  "B",
  "A",
  # "CPY",
  "C4",
  "DTZ",
  "T10",
  # "EM",
  "EXE",
  "FA",
  "ISC",
  "ICN",
  "PT",
  "Q",
]
ignore = [
  "S311",  # We are not using random for cryptographic purposes
  "S603",
]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.ruff.lint.extend-per-file-ignores]
"*/test_*.py" = ["S101"]
"nibabies/utils/debug.py" = ["A002", "T100"]
"docs/conf.py" = ["A001"]
"docs/sphinxext/github_link.py" = ["BLE001"]

[tool.ruff.format]
quote-style = "single"

[tool.coverage.run]
branch = true
omit = [
    "*/_version.py"
]

[tool.coverage.paths]
source = [
  "nibabies",
  "**/site-packages/nibabies"
]
