[metadata]
author = The NiPreps Developers
author_email = nipreps@gmail.com
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Image Recognition
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
description = NeuroImaging Babies provides processing tools for magnetic resonance images of the brain in infants.
license = 3-clause BSD
long_description = file:README.rst
long_description_content_type = text/x-rst; charset=UTF-8
project_urls =
    GitHub = https://github.com/nipreps/nibabies
url = https://github.com/nipreps/nibabies

[options]
python_requires = >= 3.6
install_requires =
    attrs
    fmriprep ~= 20.2.1
    nibabel >= 3.0.1
    nipype @ git+https://github.com/nipy/nipype.git@master
    niworkflows @ git+https://github.com/mgxd/niworkflows.git@fix/norm-res
    smriprep ~= 0.7.0
    templateflow >= 0.6.0
test_requires =
    coverage < 5
    pytest >= 4.4
    pytest-cov
    pytest-xdist >= 1.28
packages = find:

[options.entry_points]
console_scripts =
    nibabies=nibabies.cli.run:main

[options.package_data]
nibabies =
    data/*.json

[options.packages.find]
exclude =
    *.tests

[options.extras_require]
doc =
    pydot >= 1.2.3
    pydotplus
    sphinx >= 2.1.2, < 3.0
    sphinx_rtd_theme
    sphinxcontrib-apidoc ~= 0.3.0
    sphinxcontrib-napoleon
    sphinxcontrib-versioning
docs =
    %(doc)s
duecredit =
    duecredit
    citeproc-py != 0.5.0
pointclouds =
    pyntcloud
style =
    flake8 >= 3.7.0
test =
    coverage < 5
    pytest >= 4.4
    pytest-cov
    pytest-xdist >= 1.28
tests =
    %(test)s
all =
    %(doc)s
    %(duecredit)s
    %(pointclouds)s
    %(style)s
    %(test)s

[versioneer]
VCS = git
style = pep440
versionfile_source = nibabies/_version.py
versionfile_build = nibabies/_version.py
tag_prefix =
parentdir_prefix =

[flake8]
max-line-length = 99
doctests = False
ignore =
    W503
    E203
exclude=*build/
