[metadata]
author = The NiPreps Developers
author_email = nipreps@gmail.com
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Image Recognition
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
description = NeuroImaging Babies provides processing tools for magnetic resonance images of the brain in infants.
license = Apache License, 2.0
long_description = file:README.rst
long_description_content_type = text/x-rst; charset=UTF-8
project_urls =
    GitHub = https://github.com/nipreps/nibabies
url = https://github.com/nipreps/nibabies

[options]
python_requires = >= 3.7
install_requires =
    attrs
    nibabel >= 3.0.1
    nipype >= 1.5.1
    nitime
    niworkflows ~= 1.4.0
    numpy >= 1.16.5
    pybids >= 0.12.1
    sdcflows ~= 2.0.7
    smriprep ~= 0.8.1
    templateflow >= 0.6.0
test_requires =
    coverage < 5
    pytest >= 4.4
    pytest-cov
    pytest-xdist >= 1.28
packages = find:

[options.entry_points]
console_scripts =
    nibabies=nibabies.cli.run:main

[options.package_data]
nibabies =
    data/*.json
    data/*.nii.gz
    data/*.mat
    data/*.txt
    data/boilerplate.bib
    data/itkIdentityTransform.txt
    data/flirtsch/bbr.sch
    data/reports-spec.yml
    data/tests/config.toml
    VERSION

[options.packages.find]
exclude =
    *.tests

[options.extras_require]
aroma =
    future
doc =
    sphinx
    sphinx_rtd_theme
    sphinxcontrib-apidoc
    sphinxcontrib-napoleon
    myst_nb
    sphinx-argparse
docs =
    %(doc)s
duecredit =
    duecredit
    citeproc-py != 0.5.0
pointclouds =
    pyntcloud
style =
    flake8 >= 3.7.0
test =
    coverage < 5
    pytest >= 4.4
    pytest-cov
    pytest-xdist >= 1.28
tests =
    %(test)s
all =
    %(aroma)s
    %(doc)s
    %(duecredit)s
    %(pointclouds)s
    %(style)s
    %(test)s

[versioneer]
VCS = git
style = pep440
versionfile_source = nibabies/_version.py
versionfile_build = nibabies/_version.py
tag_prefix =
parentdir_prefix =

[flake8]
max-line-length = 99
doctests = False
ignore =
    W503
    E203
exclude=*build/

[tool:pytest]
doctest_optionflags = NORMALIZE_WHITESPACE ELLIPSIS
