[metadata]
author = The NiPreps Developers
author_email = nipreps@gmail.com
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Image Recognition
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
description = NeuroImaging Babies provides processing tools for magnetic resonance images of the brain in infants.
license = Apache License, 2.0
long_description = file:long_description.md
long_description_content_type = text/markdown; charset=UTF-8
project_urls =
    Documentation=https://nibabies.readthedocs.io/en/latest/
    Source Code=https://github.com/nipreps/nibabies
    Bug Tracker=https://github.com/nipreps/nibabies/issues
    Docker=https://hub.docker.com/r/nipreps/nibabies
url = https://github.com/nipreps/nibabies

[options]
python_requires = >= 3.7
install_requires =
    attrs
    migas >= 0.3.0
    nibabel >= 3.0.1
    nipype >= 1.8.1
    nitime
    niworkflows ~= 1.6.0
    numpy >= 1.21.0
    pybids >= 0.12.1
    scipy ~= 1.6.0; python_version<'3.8'
    sdcflows ~= 2.1.0
    smriprep ~= 0.9.0
    tedana ~= 0.0.12
    templateflow >= 0.6.0
    toml
test_requires =
    coverage < 5
    pytest >= 4.4
    pytest-cov
    pytest-xdist >= 1.28
packages = find:

[options.entry_points]
console_scripts =
    nibabies=nibabies.cli.run:main

[options.package_data]
nibabies =
    data/*.json
    data/*.nii.gz
    data/*.mat
    data/*.txt
    data/boilerplate.bib
    data/itkIdentityTransform.txt
    data/flirtsch/bbr.sch
    data/reports-spec.yml
    data/tests/config.toml
    VERSION

[options.packages.find]
exclude =
    *.tests

[options.extras_require]
aroma =
    future
doc =
    sphinx
    sphinx_rtd_theme
    sphinxcontrib-apidoc
    sphinxcontrib-napoleon
    myst_nb
    sphinx-argparse
docs =
    %(doc)s
duecredit =
    duecredit
    citeproc-py != 0.5.0
maint =
    fuzzywuzzy
    python-Levenshtein
pointclouds =
    pyntcloud
style =
    black ~= 22.3.0
    isort ~= 5.10.1
test =
    coverage < 5
    pytest >= 4.4
    pytest-cov
    pytest-xdist >= 1.28
tests =
    %(test)s
all =
    %(aroma)s
    %(doc)s
    %(duecredit)s
    %(maint)s
    %(pointclouds)s
    %(style)s
    %(test)s

[versioneer]
VCS = git
style = pep440
versionfile_source = nibabies/_version.py
versionfile_build = nibabies/_version.py
tag_prefix =
parentdir_prefix =

[flake8]
max-line-length = 99
doctests = False
ignore =
    W503
    E203
exclude=*build/

[tool:pytest]
doctest_optionflags = NORMALIZE_WHITESPACE ELLIPSIS
