[metadata]
name = nibabies-wrapper
version = attr: nibabies_wrapper.__version__
url = https://github.com/nipreps/nibabies
author = The NiPreps developers
author_email = nipreps@gmail.com
maintainer = Mathias Goncalves
maintainer_email = nipreps@gmail.com
license = Apache 2.0
description = A wrapper for generating Docker and Singularity commands for simpler NiBabies usage
long_description = file:README.rst
long_description_content_type = text/x-rst; charset=UTF-8
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
py_modules = nibabies_wrapper
install_requires =
    setuptools <45; python_version < "3.0"

[options.entry_points]
console_scripts =
    nibabies-wrapper=nibabies_wrapper:main

[bdist_wheel]
universal=1

[flake8]
max-line-length = 99
